[package]
name = "fat32-fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="2.33.3"
fscommon={version = "0.1.1", features = ["std"]}
fatfs={path="../modified_dependencies/rust-fatfs",version="0.4"}