[package]
name = "MyOs"
version = "0.1.0"
edition = "2021"
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
debug = true
[dependencies]
sbi-rt = { version = "0.0.2", features = ["legacy"] }
embedded-hal = "0.2.3"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
log = "0.4.21"
buddy_system_allocator = "0.6.0"
[dependencies.embedded-graphics]
optional = true
version = "0.6.0-beta.2"
